# flacky

./: <  README.md  docker-compose.yml
back/: Cargo.toml
back/migrations/: 20260404162617_create_songs_table.sql  20260404173751_create_playlists_table.sql  20260404174024_create_playlists_songs_table.sql
back/src/: auth.rs  handlers.rs  main.rs  models.rs
