[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
secrecy = {version = "0.10.3" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
axum-extra = "0.12.5"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-s3 = "1.128.0"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
